XSRF 跨站请求伪造

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -3,3 +3,7 @@ httpport = 9090
 runmode = dev
 
 copyrequestbody = true
+
+enablexsrf = true
+xsrfkey = 61oETzKXQAGaYdkL5gEmGeJJFuYh7EQnp2XdTP1o
+xsrfexpire = 3600
